--- a/typhos/ui/widgets/tweakable.ui
+++ b/typhos/ui/widgets/tweakable.ui
@@ -174,7 +174,7 @@
         <item>
          <spacer name="verticalSpacer_2">
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Orientation::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
