--- a/typhos/ui/core/embedded_screen.ui
+++ b/typhos/ui/core/embedded_screen.ui
@@ -93,7 +93,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
