--- a/typhos/ui/core/engineering_screen.ui
+++ b/typhos/ui/core/engineering_screen.ui
@@ -87,7 +87,7 @@
        <item>
         <spacer name="read_spacer">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Orientation::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
@@ -158,7 +158,7 @@
        <item>
         <spacer name="config_spacer">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Orientation::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
@@ -175,7 +175,7 @@
    <item>
     <spacer name="frame_spacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
