--- a/typhos/ui/devices/PositionerBase.detailed.ui
+++ b/typhos/ui/devices/PositionerBase.detailed.ui
@@ -176,7 +176,7 @@
            <item>
             <spacer name="normal_spacer">
              <property name="orientation">
-              <enum>Qt::Vertical</enum>
+              <enum>Qt::Orientation::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
@@ -277,7 +277,7 @@
            <item>
             <spacer name="config_spacer">
              <property name="orientation">
-              <enum>Qt::Vertical</enum>
+              <enum>Qt::Orientation::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
@@ -298,7 +298,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
